add initial file

--- a/index.html
+++ b/index.html
@@ -31,23 +31,23 @@
             <li><a href="" class="header-nav-link">Portfolio</a></li>
             <li><a href="" class="header-nav-link">Contacts</a></li>
           </ul>
-          <address class="address-style">
-            <ul class="address-item">
-              <li>
-                <a
-                  href="mailto:info@devstudio.com"
-                  class="address-link address-tab"
-                  >info@devstudio.com</a
-                >
-              </li>
-              <li>
-                <a href="tel:+110001111111" class="address-link address-tab"
-                  >+11 (000) 111-11-11</a
-                >
-              </li>
-            </ul>
-          </address>
         </nav>
+        <address class="address-style">
+          <ul class="address-item">
+            <li>
+              <a
+                href="mailto:info@devstudio.com"
+                class="address-link address-tab"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a href="tel:+110001111111" class="address-link address-tab"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
         <button class="burger-btn" type="button" data-menu-open>
           <svg class="burger-icon" width="24" height="24">
             <use href="./images/icons.svg#icon-heroicons-solid_menu"></use>
@@ -63,18 +63,18 @@
             <nav class="mobile-menu-nav">
               <ul class="mobile-navig">
                 <li>
-                  <a href="./index.html" class="mob-nav-link">Studio</a>
+                  <a href="./index.html" class="mob-nav">Studio</a>
                 </li>
                 <li><a href="" class="mob-nav-link">Portfolio</a></li>
                 <li><a href="" class="mob-nav-link">Contacts</a></li>
               </ul>
             </nav>
-            <address>
+            <address class="address-style-mob">
               <ul class="mobile-menu-address">
                 <li>
                   <a
                     href="mailto:info@devstudio.com"
-                    class="mob-address-link address-tab"
+                    class="mob-address address-tab"
                     >info@devstudio.com</a
                   >
                 </li>
@@ -459,8 +459,10 @@
               <div class="overlay">
                 <picture>
                   <source
-                    srcset="./images/porfolio/banking-desk.jpg 1x, 
-                    ./images/porfolio/banking-desk@2x.jpg 2x."
+                    srcset="
+                      ./images/porfolio/banking-desk.jpg    1x,
+                      ./images/porfolio/banking-desk@2x.jpg 2x
+                    "
                     media="(min-width: 1158px)"
                   />
                   <source
@@ -502,8 +504,8 @@
                 <picture>
                   <source
                     srcset="
-                      ./images/porfolio/payment-desk.jpg   1x,
-                      /images/porfolio/payment-desk@2x.jpg 2x
+                      ./images/porfolio/payment-desk.jpg    1x,
+                      ./images/porfolio/payment-desk@2x.jpg 2x
                     "
                     media="(min-width: 1158px)"
                   />
@@ -546,8 +548,8 @@
                 <picture>
                   <source
                     srcset="
-                      ./images/porfolio/meditation-desk.jpg   1x,
-                      /images/porfolio/meditation-desk@2x.jpg 2x
+                      ./images/porfolio/meditation-desk.jpg    1x,
+                      ./images/porfolio/meditation-desk@2x.jpg 2x
                     "
                     media="(min-width: 1158px)"
                   />
@@ -590,8 +592,8 @@
                 <picture>
                   <source
                     srcset="
-                      ./images/porfolio/car-desk.jpg   1x,
-                      /images/porfolio/car-desk@2x.jpg 2x
+                      ./images/porfolio/car-desk.jpg    1x,
+                      ./images/porfolio/car-desk@2x.jpg 2x
                     "
                     media="(min-width: 1158px)"
                   />
@@ -634,8 +636,8 @@
                 <picture>
                   <source
                     srcset="
-                      ./images/porfolio/mobile-desk.jpg   1x,
-                      /images/porfolio/mobile-desk@2x.jpg 2x
+                      ./images/porfolio/mobile-desk.jpg    1x,
+                      ./images/porfolio/mobile-desk@2x.jpg 2x
                     "
                     media="(min-width: 1158px)"
                   />
@@ -678,8 +680,8 @@
                 <picture>
                   <source
                     srcset="
-                      ./images/porfolio/courses-desk.jpg   1x,
-                      /images/porfolio/courses-desk@2x.jpg 2x
+                      ./images/porfolio/courses-desk.jpg    1x,
+                      ./images/porfolio/courses-desk@2x.jpg 2x
                     "
                     media="(min-width: 1158px)"
                   />
